--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,7 @@
     </main>
 
     <footer>
-      <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
+      <include src="./partials/footer.html"></include>
     </footer>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
