--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
       <!-- <include src="./partials/example.html"></include> -->
+      <include src="./partials/gallery.html"></include>
     </main>
 
     <footer>
