--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
 
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
+      <!-- <include src="./partials/gallery.html"></include> -->
+      <include src="./partials/gallery.html"></include>
     </main>
 
     <footer>
