--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
       <!-- <include src="./partials/example.html"></include> -->
       <include src="./partials/gallery.html"></include>
       <include src="./partials/spinner.html"></include>
+      <include src="./partials/pagination.html"></include>
     </main>
 
     <footer>
