--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
 
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
       <include src="./partials/gallery.html"></include>
       <include src="./partials/spinner.html"></include>
+      <include src="./partials/pagination.html"></include>
     </main>
 
     <footer>
@@ -49,9 +49,5 @@
 
     <!-- Підключення скриптів -->
     <script type="module" src="./index.js"></script>
-
-    <!-- Скрипт Степана, тестова версія -->
-    <script type="module" src="./js/search-by-keyword.js"></script>
-    <!-- Скрипт Степана, тестова версія -->
   </body>
 </html>
