--- a/src/index.html
+++ b/src/index.html
@@ -49,5 +49,6 @@
 
     <!-- Підключення скриптів -->
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/search-by-keyword.js"></script>
   </body>
 </html>
