--- a/src/library.html
+++ b/src/library.html
@@ -21,9 +21,8 @@
   <!-- Тіло сторінки -->
   <body>
     <header>
-      <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
-    </header>
+            <include src="./partials/header-library.html"></include> 
+   </header>
 
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
