--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
       <include src="./partials/gallery.html"></include>
       <include src="./partials/spinner.html"></include>
       <include src="./partials/pagination.html"></include>
+      <include src="./partials/scroll-up-btn.html"></include>
     </main>
 
     <footer>
