--- a/src/library.html
+++ b/src/library.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
+      <!-- <include src="./partials/example.html"></include> -->.
     </header>
 
     <main>
