--- a/src/library.html
+++ b/src/library.html
@@ -27,7 +27,7 @@
 
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
+      <include src="./partials/library-list.html"></include>
     </main>
 
     <footer>
