--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
 
     <footer>
       <include src="./partials/footer.html"></include>
+      <include src="./partials/team-modal.html"></include>
     </footer>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
@@ -49,5 +50,6 @@
 
     <!-- Підключення скриптів -->
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/team-modal.js"></script>
   </body>
 </html>
