--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
 
     <footer>
       <include src="./partials/footer.html"></include>
+      <include src="./partials/team-modal.html"></include>
     </footer>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
