--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
       <include src="./partials/footer.html"></include>
     </footer>
 
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <include src="./partials/modalfilm.html"></include>
     <!-- <include src="./partials/example.html"></include> -->
 
     <!-- Підключення скриптів -->
