--- a/src/library.html
+++ b/src/library.html
@@ -20,9 +20,9 @@
 
   <!-- Тіло сторінки -->
   <body>
-    <header>
+    <header class="library-header">
       <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
+      <include src="./partials/header-library.html"></include>
     </header>
 
     <main>
