--- a/src/library.html
+++ b/src/library.html
@@ -32,7 +32,7 @@
 
     <footer>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
-      <!-- <include src="./partials/example.html"></include> -->
+      <include src="./partials/footer.html"></include>
     </footer>
 
     <!-- ❗️❗️❗️ Add partials like so for every page -->
