--- a/src/library.html
+++ b/src/library.html
@@ -15,7 +15,7 @@
     />
 
     <!-- Підключення js  -->
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
   </head>
 
   <!-- Тіло сторінки -->
@@ -39,6 +39,6 @@
     <!-- <include src="./partials/example.html"></include> -->
 
     <!-- Підключення скриптів -->
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/library-localStorage.js"></script>
   </body>
 </html>
