--- a/src/library.html
+++ b/src/library.html
@@ -40,6 +40,6 @@
 
     <!-- Підключення скриптів -->
     <script type="module" src="./js/library-localStorage.js"></script>
-    <!-- <script type="module" src="./js/open-modal.js"></script> -->
+    <script type="module" src="./js/open-modal.js"></script>
   </body>
 </html>
