Модалка підключена до бібліотеки

--- a/src/library.html
+++ b/src/library.html
@@ -28,6 +28,7 @@
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
       <include src="./partials/library-list.html"></include>
+      <include src="./partials/gallery.html"></include>
     </main>
 
     <footer>
