fix modal window

--- a/src/library.html
+++ b/src/library.html
@@ -29,6 +29,7 @@
       <!-- ❗️❗️❗️ Add partials like so for every page -->
       <include src="./partials/library-list.html"></include>
       <include src="./partials/gallery.html"></include>
+      <include src="./partials/team-modal.html"></include>
     </main>
 
     <footer>
@@ -41,6 +42,7 @@
 
     <!-- Підключення скриптів -->
     <script type="module" src="./js/library-localStorage.js"></script>
+    <script type="module" src="./js/team-modal.js"></script>
     <!-- <script type="module" src="./js/open-modal.js"></script> -->
   </body>
 </html>
