fix team modal on both pages

--- a/src/library.html
+++ b/src/library.html
@@ -42,7 +42,6 @@
 
     <!-- Підключення скриптів -->
     <script type="module" src="./js/library-localStorage.js"></script>
-    <script type="module" src="./js/team-modal.js"></script>
-    <!-- <script type="module" src="./js/open-modal.js"></script> -->
+    <script type="module" src="./js/index-library.js"></script>
   </body>
 </html>
