--- a/src/library.html
+++ b/src/library.html
@@ -28,7 +28,8 @@
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
       <include src="./partials/library-list.html"></include>
-      <!-- <include src="./partials/gallery.html"></include> -->
+      <include src="./partials/modalfilm.html"></include>
+      <!-- <include src="./partials/spinner.html"></include> -->
       <include src="./partials/team-modal.html"></include>
     </main>
 
