--- a/src/library.html
+++ b/src/library.html
@@ -13,6 +13,13 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,600&family=Raleway:wght@700&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <!-- favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon.ico"
+    />
 
     <!-- Підключення js  -->
     <!-- <script type="module" src="./index.js"></script> -->
