фільтрація на унікальність в LS

--- a/src/library.html
+++ b/src/library.html
@@ -29,7 +29,7 @@
       <!-- ❗️❗️❗️ Add partials like so for every page -->
       <include src="./partials/library-list.html"></include>
       <include src="./partials/modalfilm.html"></include>
-      <!-- <include src="./partials/spinner.html"></include> -->
+      <include src="./partials/spinner.html"></include>
       <include src="./partials/team-modal.html"></include>
     </main>
 
