--- a/src/library.html
+++ b/src/library.html
@@ -13,13 +13,6 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,600&family=Raleway:wght@700&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <!-- favicon -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./images/favicon.ico"
-    />
 
     <!-- Підключення js  -->
     <!-- <script type="module" src="./index.js"></script> -->
@@ -35,9 +28,6 @@
     <main>
       <!-- ❗️❗️❗️ Add partials like so for every page -->
       <include src="./partials/library-list.html"></include>
-      <include src="./partials/modalfilm.html"></include>
-      <!-- <include src="./partials/spinner.html"></include> -->
-      <include src="./partials/team-modal.html"></include>
     </main>
 
     <footer>
@@ -50,6 +40,6 @@
 
     <!-- Підключення скриптів -->
     <script type="module" src="./js/library-localStorage.js"></script>
-    <script type="module" src="./js/index-library.js"></script>
+    <!-- <script type="module" src="./js/open-modal.js"></script> -->
   </body>
 </html>
